# athlete-analyzer

./: CMakeLists.txt  README.md  main.cpp
AthleteAnalyzer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
AthleteAnalyzer/core/: golf_analyzer.hpp
assets/: sample_data.csv
core/: golf_analyzer.cpp
